--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,6 +9,7 @@
 @import '../node_modules/bootstrap/scss/mixins';
 @import '../node_modules/bootstrap/scss/reboot';
 @import '../node_modules/bootstrap/scss/grid';
+@import '../node_modules/bootstrap/scss/navbar';
 
 body {
   &[data-theme='dark'] {
