--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,8 +17,11 @@ body {
     color: #eee;
   }
 }
+.navbar {
+  padding: 10px 0;
+}
 .resume-body{
-  margin-top: 20px;
+  margin-top: 10px;
 }
 .intro {
   display: flex;
