--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,8 +10,10 @@
 @import '../node_modules/bootstrap/scss/reboot';
 @import '../node_modules/bootstrap/scss/grid';
 @import '../node_modules/bootstrap/scss/navbar';
+@import '../node_modules/bootstrap/scss/utilities';
 
 body {
+  font-family: 'Inter', sans-serif;
   &[data-theme='dark'] {
     background-color: #111;
     color: #eee;
@@ -41,6 +43,39 @@ body {
     }
     h3{
       margin-bottom: 0;
+    }
+  }
+}
+.home{
+  .intro-hero{
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    // align-items: center;
+    .avatar {
+      width: 200px;
+      margin-right: 30px;
+      .profile-avatar {
+        max-width: 200px;
+        margin-right: 3px;
+        border-radius: 10px;
+      }
+    }
+    .details{
+      
+      max-width: 400px;
+      h2{
+        font-size: 32px;
+        margin-bottom: 0;
+      }
+      h3{
+        font-size: 24px;
+        margin-bottom: 0;
+      }
+      p{
+        font-size: 18px;
+        margin-bottom: 0;
+      }
     }
   }
 }
