--- a/styles/style.scss
+++ b/styles/style.scss
@@ -15,14 +15,49 @@
 body {
   font-family: 'Inter', sans-serif;
   &[data-theme='dark'] {
-    background-color: #111;
-    color: #eee;
+    background-color: #17181a;
+    color: #e4e6eb;
   }
 }
 .navbar {
   padding: 10px 0;
+  @include media-breakpoint-down(md) {
+    display: none;
+  }
 }
-.resume-body{
+.mobile-navbar {
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
+  background-color: #232526;
+  bottom: 0;
+  height: 65px;
+  left: 0;
+  position: fixed;
+  right: 0;
+  z-index: 100;
+  border-top: 2px solid #353738;
+  overflow: hidden;
+  &-container {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    margin: 0 auto;
+  }
+  &-item {
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1 1 0;
+    padding: 0 2px;
+    a{
+      color:#b0b3b8;
+    }
+  }
+}
+.resume-body {
   margin-top: 10px;
 }
 .intro {
@@ -37,41 +72,48 @@ body {
       border-radius: 10px;
     }
   }
-  .details{
-    h2{
+  .details {
+    h2 {
       margin-bottom: 0;
     }
-    h3{
+    h3 {
       margin-bottom: 0;
     }
   }
 }
-.home{
-  .intro-hero{
+.home {
+  .intro-hero {
     margin-top: 50px;
     display: flex;
     flex-wrap: wrap;
     // align-items: center;
+    @include media-breakpoint-down(md) {
+      margin: 0;
+    }
     .avatar {
       width: 300px;
       margin-right: 30px;
+      @include media-breakpoint-down(md) {
+        width: auto;
+        margin: 20px auto;
+      }
       .profile-avatar {
-        max-width: 300px;
+        max-width: 100%;
         margin-right: 3px;
         border-radius: 10px;
       }
     }
-    .details{     
+    .details {
       max-width: 400px;
-      h2{
+      h2 {
         font-size: 32px;
         margin-bottom: 0;
       }
-      h3{
+      h3 {
         font-size: 24px;
         margin-bottom: 0;
       }
-      p{
+      p {
         font-size: 18px;
         margin-bottom: 0;
       }
