--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -5,11 +5,13 @@
       background-color: #222526;
       padding: 20px;
       border-radius: 10px;
+      margin-bottom: 10px;
     }
     .mainbox {
       background-color: #222526;
       padding: 20px;
       border-radius: 10px;
+      margin-bottom: 10px;
     }
   }
   .intro {
