added contact page

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,6 +21,7 @@ $color-maroon: #fff;
 @import '../node_modules/bootstrap/scss/utilities';
 @import './home';
 @import './resume';
+@import './contact';
 
 body {
   font-family: 'Inter', sans-serif;
