--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -1,5 +1,8 @@
 .contact {
   .contact-body {
     margin-top: 50px;
+    @include media-breakpoint-down(md) {
+      margin-bottom: 70px;
+    }
   }
 }
