--- a/styles/style.scss
+++ b/styles/style.scss
@@ -85,6 +85,7 @@ body {
     margin: 0 auto;
   }
   &-item {
+    color: #b0b3b8;
     align-items: center;
     cursor: pointer;
     display: flex;
