--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -6,7 +6,7 @@
       margin-bottom: 70px;
     }
     .leftbox {
-      background-color: #222526;
+      background-color: #fff;
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 10px;
@@ -17,7 +17,7 @@
       }
     }
     .mainbox {
-      background-color: #222526;
+      background-color: #fff;
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 10px;
