added darker headings

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,7 +5,7 @@
 
 // @import "../node_modules/bootstrap/scss/bootstrap";
 $color-grey-30: #a0a0a0;
-$color-grey-50: #777777;
+$color-grey-50: #cccccc;
 $color-grey-70: #4a4a4a;
 $color-maroon: #fff;
 
@@ -33,7 +33,7 @@ body {
       color: #777777;
     }
     .grey-50 {
-      color: $color-grey-50;
+      color: #525252;
     }
     .grey-70 {
       color: $color-grey-30;
