--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,6 +14,7 @@ $color-maroon: #fff;
 @import '../node_modules/bootstrap/scss/mixins';
 @import '../node_modules/bootstrap/scss/reboot';
 @import '../node_modules/bootstrap/scss/grid';
+@import '../node_modules/bootstrap/scss/list-group';
 @import '../node_modules/bootstrap/scss/navbar';
 @import '../node_modules/bootstrap/scss/utilities';
 @import './custom-nav';
@@ -22,6 +23,7 @@ $color-maroon: #fff;
 @import './home';
 @import './resume';
 @import './contact';
+@import './track';
 
 body {
   font-family: 'Inter', sans-serif;
