--- a/styles/home.scss
+++ b/styles/home.scss
@@ -23,6 +23,10 @@
         border-radius: 10px;
       }
     }
+    .astro-link{
+      color: #e6007d;
+      font-weight: 600;
+    }
     .details {
       max-width: 400px;
       h2 {
